--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #333;
   font-family: sans-serif;
-  font-size: 10px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .container {
+  background-color: black;
   margin: 0 auto;
   width: 420px;
 }
@@ -18,4 +24,43 @@ nav {
 
 .restaurant-list {
   padding-top: 50px;
+  width: 100%;
+}
+
+.location {
+  background-color: #DADADA;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  border-bottom: 1px solid #000000;
+}
+
+.content {
+  box-sizing: border-box;
+  position: relative;
+  top: 10px; right: -20px;
+  text-align: left;
+}
+
+.location:hover {
+  background-color: grey;
+}
+
+h3 {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 20px;
+}
+
+.arrow {
+font-size: 12px;
+text-align: right;
+position: relative;
+right: 5px;
+bottom: 62px;
+}
+
+
+.border-box {
+  border: solid;
 }
